--- a/chocolates/templates/chocolates/add_chocolate.html
+++ b/chocolates/templates/chocolates/add_chocolate.html
@@ -48,9 +48,9 @@
     {{ block.super }}
 
     <!-- Hides the 'choc_name' field from the user, this field is an automatically prepopulated 'slug' field based on what is manually entered in the 'choc_friendly_name' field -->
-    <script>
+    <!-- <script>
         document.getElementById('div_id_choc_name').style.display = 'none';
-    </script>
+    </script> -->
 
     <!-- Script to handle the custom select image field -->
     <script type="text/javascript">
