Add titles to templates across site

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -3,6 +3,8 @@
 {% load static %}
 {% load bag_tools %}
 
+{% block extra_title %} Cart{% endblock %}
+
 <!-- Additional sub-header block below main header, extended from base.html -->
 {% block page_header %}
 <div class="container header-container col-8 mx-auto">
