--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_title %} Chocolate Menu{% endblock %}
+
 <!-- Additional sub-header block below main header, extended from base.html -->
 {% block page_header %}
 <div class="container header-container col-8 mx-auto">
