--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_title %} About{% endblock %}
+
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'about/css/about.css' %}">
 {% endblock %}
