--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block head_title %}404 Not Found{% endblock %}
+
 {% block content %}
     <div class="container header-container">
         <div class="row">
