--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -27,7 +27,7 @@
     <!-- One row split into two columns  -->
     <div class="row">
 
-        <!-- First column is the chocolate image container -->
+        <!-- First column is the chocolate image container, super user optoins and review section -->
         <div class="col-12 col-md-6 col-lg-6 col-xl-4 offset-xl-2 mb-4">
             <div class="choc-image-container-detail">
                 {% if chocolate.choc_image %}
@@ -69,8 +69,58 @@
                 </div>
             </div>
             {% endif %}
-        </div>
 
+            <!-- Review section -->
+            <div class="mt-4 w-100 purple-text">
+                <h3>
+                    Reviews
+                </h3>
+                
+                {% if request.user.is_authenticated %}
+                <P class="mt-3">Would you like to leave a review for this chocolate?</P> 
+                <form method="POST" action=".">
+                    {% csrf_token %}
+
+                    <!-- Rating from 1 to 5, drop down menu -->
+                    <div>
+                        <label>
+                            Your rating (5 being the tastiest!)
+                        </label>
+                        <select name="choc_rating">
+                            <option value="1">1 </option>
+                            <option value="1">2</option>
+                            <option value="1" selected>3</option>
+                            <option value="1">4</option>
+                            <option value="1">5</option>
+                        </select>
+                    </div>
+
+                    <!-- Review text content -->
+                    <div>
+                        <label>
+                            Your thoughts..
+                        </label>
+                        <textarea class="w-100" name="review_content">
+
+                        </textarea>
+                    </div>
+
+                    <div>
+                        <button>Submit</button>
+                    </div>
+
+                </form>
+            {% endif %}
+
+                
+            </div>
+
+
+
+
+
+        </div>
+        <!-- First column ends above this line -->
 
         <!-- Second column is the chocolate details container -->
         <div class="col-12 col-md-6 col-lg-4">
