Add customer border to text area in review section

--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -100,9 +100,11 @@
                         <label>
                             Your thoughts..
                         </label>
-                        <textarea class="w-100" name="review_content">
+                        <div class="border-purple border-radius-10 p-2 mb-2">
+                            <textarea class="w-100 border-0" name="review_content">
 
-                        </textarea>
+                            </textarea>
+                        </div>
                     </div>
 
                     <div>
