--- a/static/css/base.css
+++ b/static/css/base.css
@@ -391,7 +391,7 @@ input[id="id-save-info"] {
     border: 1px solid #551b8c;
     border-radius: 10px;
     width: 100%;
-    max-width: 25rem;
+    max-width: 17.5rem !important;
     padding: 1rem;
     margin-top: 3rem;
     margin-bottom: 2rem;
