--- a/chocolates/templates/chocolates/chocolate_detail.html
+++ b/chocolates/templates/chocolates/chocolate_detail.html
@@ -78,9 +78,7 @@
                             Your thoughts..
                         </label>
                         <div class="border-purple border-radius-10 p-2 mb-2">
-                            <textarea class="w-100 border-0" name="review_content">
-
-                            </textarea>
+                            <textarea class="w-100 border-0" name="review_content"></textarea>
                         </div>
                     </div>
 
@@ -100,18 +98,23 @@
                 and render it on the page, below chocolate image -->
                 {% for review in chocolate.choc_reviews.all %}
                     {% if review.publish_review == "Yes" %}
-                        <div class="mt-3">
+                        <div class="mt-4">
 
                             <!-- Review content -->
-                            <p>
+                            <p class="py-0 mb-0">
                             <span class="bright-purple-text">"</span>
                             {{ review.review_content}}
                             <span class="bright-purple-text">"</span>
                             </p>
 
                             <!-- Review rating -->
-                            <p>
-                                Rating: {{ review.choc_rating }}
+                            <p class="py-0 mb-0 small">
+                                Rating: <strong>{{ review.choc_rating }} / 5</strong>
+                            </p>
+
+                            <!-- Review user -->
+                            <p class="py-0">
+                                <span class="small">Left by <span class="bright-purple-text">{{ review.created_by_user }}</span>, on {{ review.created_date }}</span>
                             </p>
                         </div>
                     {% endif %}
