--- a/chocolates/templates/chocolates/chocolates.html
+++ b/chocolates/templates/chocolates/chocolates.html
@@ -165,11 +165,7 @@
                                     <!-- Displays the diet type below the category (e.g Keto, Vegan, Gluten-Free etc), from chocolates.html -->
                                     {% if chocolate.choc_dietary_type %}
                                     <p class="small mt-1 mb-0">
-                                        <a class="text-muted"
-                                            href="{% url 'chocolates' %}?choc_dietary_type={{ chocolate.choc_dietary_type }}">
-                                            <i
-                                                class="fa-solid fa-check text-success mr-2"></i>{{ chocolate.choc_dietary_type.diet_friendly_name }}
-                                        </a>
+                                            <i class="fa-solid fa-check text-success mr-2"></i><span class="text-muted">{{ chocolate.choc_dietary_type.diet_friendly_name }}</span>
                                     </p>
                                     {% endif %}
 
